Core: Fix respond link in head. Add blank IE conditional to prevent delayed loading of CSS for IE. Fix datepicker popup default z-index.

--- a/plugins/jojo_core/css/style.css
+++ b/plugins/jojo_core/css/style.css
@@ -37,3 +37,7 @@ img.icon-image {
     padding: 6px 12px;
     position: relative;
 }
+
+.AnyTime-win {
+    z-index: 1000;
+}
